--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "webgme": "^2.21.3"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "webgme": "^2.33.0"
   },
   "dependencies": {
-    "bcrypt": "^3.0.2",
-    "node-gyp": "^3.8.0",
-    "webgme": "^2.33.0",
-    "webgme-bindings": "^1.0.1",
-    "zeromq": "^5.1.0"
+    "backbone": "^1.3.3",
+    "jointjs": "^2.2.1",
+    "lodash": "^4.17.11",
+    "webgme-bindings": "latest"
   }
 }
