--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "backbone": "^1.3.3",
     "jointjs": "^2.2.1",
     "lodash": "^4.17.11",
-    "webgme-bindings": "latest"
+    "webgme-bindings": "latest",
+    "webgme-icore": "^2.0.1"
   }
 }
