--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "dependencies": {
     "backbone": "^1.3.3",
+    "ejs": "^2.6.1",
     "jointjs": "^2.2.1",
     "lodash": "^4.17.11",
-    "webgme-bindings": "latest",
+    "webgme-bindings": "^1.0.1",
     "webgme-icore": "^2.0.1"
   }
 }
